--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,6 @@ services:
     environment:
       - 'POSTGRES_USER=postgres'
       - 'POSTGRES_PASSWORD=postgres'
+      - 'POSTGRES_HOST_AUTH_METHOD=trust'
     volumes:
       - 'data-base:/var/lib/postgresql/data'
